@@ -66,5 +66,6 @@ public class UIComponents {
     public static final int _TAGFIELD = 38;
     public static final int _DATEFOMATCOMBO = 39;
     public static final int _ICONSIZECOMBO = 40;
-    public static final int _COLLATIONCOMBO = 41;    
+    public static final int _COLLATIONCOMBO = 41;
+    public static final int _UISCALECOMBO = 42;
 }
