@@ -1,3 +1,4 @@
+lblUIScaling = UI Scaling
 lblComicVineQueryEnemiesAndFriends = Query friends & enemies (slow)
 lblComicVineQueryEnemiesAndFriendsHelp = Allow the online search to include friends and enemies information. This will slow the search significantly.
 lblComicVineApiKeyHelp = You can request for an API key here: https://comicvine.gamespot.com/api/
